tests/cases_invalid/buffer_duplicated_name/.expected
error: buffer with name `duplicated` is defined multiple times
 --> ./cases_invalid/buffer_duplicated_name/main.shd:4:5
  |
1 | buf duplicated = 1.;
  |     ---------- info: buffer with same name is defined here
2 | buf other1 = 2.;
3 | buf other2 = 3.;
4 | buf duplicated = 4.;
  |     ^^^^^^^^^^ duplicated buffer name
  |
